--- a/hidden.html
+++ b/hidden.html
@@ -44,5 +44,30 @@ function processGuess (){
 }
 </script>
 
+<div>
+    <img src = "monkey.jpg" width = "200px" height="200px" onclick="newImage()" id = "image1">
+</div>
+
+<script>
+    usingImage = 1
+
+    function newImage(){
+        switch(usingImage){
+            case 1:
+                document.getElementById("image1").src = "narwhal.jpg";
+                usingImage = 2;
+                break;
+            case 2:
+                document.getElementById("image1").src = "snake.jpg";
+                usingImage = 3;
+                break;
+            case 3:
+                document.getElementById("image1").src = "monkey.jpg";
+                usingImage = 1;
+                break;
+        }
+    }
+</script>
+
 </body>
 </html> 
