--- a/hidden.html
+++ b/hidden.html
@@ -11,7 +11,7 @@
 
 <form>
     <label for="form1_secret">Enter the secret word </label>
-    <input type ="password" id="form1_secret" name="form1_age" min=10 max=50 step=2 value=30> <br>
+    <input type ="password" id="form1_secret" name="form1_age"> <br>
 
     <label for="form1_guess">Enter a guess</label>
     <input type ="text" id="form1_guess" name="form1_nick" autofocus> <br>
